<resources>
    <string name="app_name">BLE-DMX</string>
    <string name="stop">STOP</string>
    <string name="ble_status">BLE Status</string>
    <string name="bluetooth_icon">Bluetooth Icon</string>
    <string name="dash">&#160;-&#160;</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="disconnect">Disconnect</string>
    <string name="STM32_filter">STM32 Filter</string>
    <string name="search">Search</string>
    <string name="log">Log</string>
    <string name="auto_scroll">Auto Scroll</string>
    <string name="reset_DMX">Reset DMX?</string>
    <string name="DMX">DMX</string>
    <string name="cancel">Cancel</string>
    <string name="st_logo">ST Logo</string>
</resources>