<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="fragment"
            type="com.stm.ble_mcsdk.fragment.reset.ResetFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="20dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_DMX"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />



        <Button
            android:id="@+id/DMXButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DMX"
            android:layout_marginTop="60dp"
            android:onClick="@{() -> fragment.resetDMX()}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="@{() -> fragment.dismissFragment()}"
            app:layout_constraintTop_toTopOf="@+id/DMXButton"
            app:layout_constraintLeft_toRightOf="@+id/DMXButton"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>